--- a/example/example.tex
+++ b/example/example.tex
@@ -1,111 +1,95 @@
 \documentclass{article}
 \usepackage{bentocv}
 
-
 \begin{document}
 \noindent
 \begin{minipage}{\textwidth}
-    \vspace{-1mm}
-    \bentotitle{Recherche d'un master en informatique}
+    \bentotitle{Seeking a Master's Degree in Computer Science}
     \bentoleftcolumn{
-        \begin{bentosection}{Matthieu BIDAULT}
+        \begin{bentosection}{Otto THEOTTER}
             \bentopicture{images/otter.jpg} \\
-            \myjob{Étudiant en Licence 3 Informatique} \\ 
+            \myjob{BSc in Computer Science Student} \\ 
             \textcolor{lightgray}{\rule{\linewidth}{0.4mm}} \\ 
             \vspace{2mm}
-            \myphone{+33 6 51 71 30 61} \\
+            \myphone{+44 7700 900077} \\
             \vspace{2mm}
-            \mygithub{mbido}{https://github.com/mbido} \\
+            \mygithub{ottotheotter}{https://github.com/mbido} \\
             \vspace{2mm}
-            \mymail{matthieu\_bidault@laposte.fr} \\
+            \mymail{otto\_theotter@seamail.com} \\
             \vspace{2mm}
-            \myvehiculelicence{Permis B} \\
+            \myvehiculelicence{Driver's License} \\
             \vspace{2mm}
-            \myadress{105 Montée de l'église, 39210 Montain}
+            \myadress{100 Ocean Wave, 94016 Ottertown}
         \end{bentosection}
 
-        \begin{bentosection}{Compétences}
-            \skillbox{Concentration}
+        \begin{bentosection}{Skills}
+            \skillbox{Focused}
             \skillbox{Patient}
-            \skillbox{Capacité d’adaptation}
-            \skillbox{Capacité d’observation}
+            \skillbox{Adaptable}
+            \skillbox{Keen Observer}
         \end{bentosection}
 
-        \begin{bentosection}{Langues}
-            \assoc{bentopurple}{Français}{maternelle} \\
-            \assoc{bentopurple}{Anglais}{niveau C1} \\
-            \assoc{bentopurple}{Italien}{Notions}
+        \begin{bentosection}{Languages}
+            \assoc{bentopurple}{English}{Native} \\
+            \assoc{bentopurple}{French}{Fluent} \\
+            \assoc{bentopurple}{Spanish}{Basics}
         \end{bentosection}
 
-        \begin{bentosection}{Centres d'intérêt}
-            \activitybox{dessin}
-            \activitybox{Course à pied}
-            \activitybox{Peinture}
-            \activitybox{Escalde}
-            \activitybox{développement back-end}
+        \begin{bentosection}{Interests}
+            \activitybox{Swimming}
+            \activitybox{Shell Collecting}
+            \activitybox{Coding}
+            \activitybox{Surfing}
+            \activitybox{Backend Development}
         \end{bentosection}
     }
     \bentorightcolumn{
-        \begin{bentosection}{À propos de moi}
-            \textbf{Étudiant} en licence 3 d'Informatique à l'UFR-ST de Besançon, 
-            je suis \textbf{passionné} par l'informatique et le développement.
-            J'ai pour but de devenir \textbf{enseignant} dans le secondaire ou supérieur.
+        \begin{bentosection}{About Me}
+            \textbf{Computer Science student} at the University of Oceanic Affairs, 
+            passionate about software engineering and data analysis. Aiming to become 
+            a \textbf{software architect}.
 
-            Je suis à la recherche d'un master dans le but de me préparer
-            au concours de l'\textbf{agrégation d'informatique}. 
+            Currently seeking a master's degree to further specialize in 
+            \textbf{artificial intelligence and machine learning}.
 
-            Je suis \textbf{motivé}, \textbf{sérieux} et j'aime apprendre de \textbf{nouvelles choses}.
+            I am \textbf{motivated}, \textbf{dedicated}, and enjoy learning \textbf{new technologies}.
         \end{bentosection}
-        \begin{bentosection}{Parcour Scolaire}
-            \bentoeducation{Licence Informatique}
-            {UFR-ST Besançon}
-            {Besançon}
-            {depuis 2022}
+        \begin{bentosection}{Educational Background}
+            \bentoeducation{BSc in Computer Science}
+            {University of Oceanic Affairs}
+            {Ottertown}
+            {2019 - 2022}
+            {Specialized in Software Engineering}
+            \bentoeducation{Advanced Diploma in Web Development}
+            {Ottertown Polytechnic}
+            {Ottertown}
+            {2017 - 2019}
             {}
-            \bentoeducation{CPGE MP2I}
-            {Lycée Victor Hugo}
-            {Besançon}
-            {2021 - 2022}
-            {}
-            \bentoeducation{Baccalauréat général}
-            {Lycée Victor Hugo}
-            {Besançon}
-            {2021}
-            {Spécialités Mathématiques et Informatique - Mention Bien}
+            \bentoeducation{High School Diploma}
+            {Sea School}
+            {Ottertown}
+            {2016}
+            {Specialized in Mathematics and Physics}
         \end{bentosection}
-        \begin{bentosection}{Expériences professionnelles}
-            \bentoexperience{Vendeur}
-            {vente}
-            {Boulangerie Fumey}
-            {Messia sur Sorne - France}
-            {2023(3 mois)}
-            {M'a permis de développer mon sens du contact client}
-            \bentoexperience{Caissier / Employé de rayon}
-            {vente}
-            {Épicerie du Domaine}
-            {Doucier - France}
-            {2022(2 mois)}
-            {M'a permis de développer mon sens de l'organisation}
-            \bentoexperience{Réserviste de l'armée de terre}
-            {armée}
-            {19ème Régiment du Génie}
-            {Besançon - France}
-            {2020 - 2022}
-            {M'a permis de développer mon sens de la rigueur tout en me forgeant 
-            un esprit d'équipe et un sang-froid à toute épreuve}
-            \bentoexperience{Palettiseur}
-            {industrie}
-            {Usine V33}
-            {Domblans - France}
-            {2021(2 mois)}
-            {M'a permis de découvrir le monde de l'industrie et de travailler dans 
-            des conditions difficiles physiquement et mentalement (ayant travaillé de nuit)}
-            \bentoexperience{Vendengeur}
-            {agriculture}
-            {Chez Pichet (Vignoble)}
-            {Lavigny - France}
-            {2020(1 mois)}
-            {}
+        \begin{bentosection}{Professional Experience}
+            \bentoexperience{Software Intern}
+            {Tech}
+            {Innovatech Solutions}
+            {Ottertown - Ocean}
+            {2022 (6 months)}
+            {Contributed to several project lifecycles, enhancing coding skills and teamwork}
+            \bentoexperience{Junior Web Developer}
+            {IT}
+            {WebWaves Agency}
+            {Ottertown - Ocean}
+            {2021 (3 months)}
+            {Developed and maintained several websites, improving client satisfaction}
+            \bentoexperience{IT Support Assistant}
+            {IT Support}
+            {TechHelp Solutions}
+            {Ottertown - Ocean}
+            {2020 - 2021}
+            {Provided technical support, improving problem-solving skills and user satisfaction}
         \end{bentosection}
     }
 \end{minipage}
