Commande pour site web

--- a/bentocv.sty
+++ b/bentocv.sty
@@ -156,6 +156,10 @@
     \textbf{\href{#2}{{\faGithub\hspace{1mm}#1}}}
 }
 
+\newcommand{\mywebsite}[2]{%
+    \textbf{\href{#2}{{\faGlobe\hspace{1mm}#1}}}
+}
+
 \newcommand{\mymail}[1]{%
     \textbf{\href{mailto:#1}{{\faEnvelope\hspace{1mm}#1}}}
 }
