--- a/example/example.tex
+++ b/example/example.tex
@@ -3,6 +3,7 @@
 
 \begin{document}
 \noindent
+\vspace*{-1cm}
 \begin{minipage}{\textwidth}
     \bentotitle{Seeking a Master's Degree in Computer Science}
     \bentoleftcolumn{
@@ -14,6 +15,8 @@
             \myphone{+44 7700 900077} \\
             \vspace{2mm}
             \mygithub{ottotheotter}{https://github.com/mbido} \\
+            \vspace{2mm}
+            \mywebsite{ottotheott.er}{https://ottotheott.er} \\
             \vspace{2mm}
             \mymail{otto\_theotter@seamail.com} \\
             \vspace{2mm}
